--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@headlessui/react": "^1.7.15",
+    "@mui/icons-material": "^5.14.15",
     "@mui/material": "^5.14.1",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
