--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,8 @@
     "aos": "^2.3.4",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
+    "echarts": "^5.4.3",
+    "echarts-for-react": "^3.0.2",
     "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
