--- a/server-fastapi/vercel.json
+++ b/server-fastapi/vercel.json
@@ -1,8 +1,14 @@
 {
     "builds": [
-      {"src": "/server/api.py", "use": "@now/python"}
+      {
+        "src": "main.py",
+        "use": "@vercel/python"
+      }
     ],
     "routes": [
-      {"src": "/(.*)", "dest": "server/api.py"}
+      {
+        "src": "/(.*)",
+        "dest": "main.py"
+      }
     ]
   }
